# docker-housekeep

./: .gitignore  README.md  pyproject.toml  state.json
src/docker-housekeep/: __main__.py  dockerapi.py  unixsocket.py
src/docker_housekeep/: __main__.py  base.py  config.py  daemon.py  dockerapi.py  feedback.py  state.py  unixsocket.py
